# triangles

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  triangle
inc/: geometry.hpp  head.hpp
tests/: CMakeLists.txt  tests.cpp  tests.txt
